Fix formatting in header.php and adjust CSS for link alignment

--- a/wp-content/themes/spiegelspelThema/style.css
+++ b/wp-content/themes/spiegelspelThema/style.css
@@ -99,7 +99,7 @@ a:-webkit-any-link {
   position: relative;
   overflow: hidden;
   display: flex;
-  justify-content: center;
+ 
   align-items: center;
 }
 
